# trustflight_firmware

./: .gitignore  .travis.yml  Cargo.toml  README.md
.cargo/: config
binary/: Cargo.toml  debug.gdb
binary/.cargo/: config
binary/src/: main.rs
board/: Cargo.toml
board-trait/: Cargo.toml
board-trait/src/: lib.rs
board/src/: lib.rs
ci/: install.sh  script.sh
firmware/: Cargo.toml
firmware/src/: lib.rs
floorplan/: trustflight_v1.ioc
hal/: Cargo.toml
hal-trait/: Cargo.toml
hal-trait/src/: lib.rs
hal/src/: lib.rs
src/: main.rs
trustflight/: Cargo.toml  build.rs
trustflight-hal/: Cargo.toml  memory.x
trustflight/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  time.rs
