[package]
name = "trustflight_firmware"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "A multirotor flight controller firmware you can trust"
keywords = ["arm", "cortex-m", "mav"]
license = "BSL-1.0"
repository = "https://github.com/korken89/trustflight_firmware"
version = "0.1.0"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-abort = "*"
stm32f302x = { git = "https://github.com/korken89/stm32f302x", branch = "master", features = ["rt"] }

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = 2
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
