[package]
name = "trustflight-board"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.5.3"

[dependencies.cortex-m]
version = "0.5.6"
features = ["inline-asm"]

[dependencies.stm32f3]
version = "0.2.2"
features = ["stm32f302", "rt"]

[dependencies.trustflight-board-trait]
path = "../board-trait"
version = "0.1.0"
