[package]
name = "trustflight-board"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.4"

[dependencies.cortex-m]
version = "0.5.7"
features = ["inline-asm"]

[dependencies.stm32f30x-hal]
version = "0.2.0"
git = "https://github.com/korken89/stm32f30x-hal.git"
features = ["rt"]

[dependencies.trustflight-board-trait]
path = "../board-trait"
version = "0.1.0"
