[package]
name = "trustflight-hal"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.5.2"

[dependencies.cortex-m]
version = "0.5.4"
features = ["inline-asm"]

[dependencies.stm32f3]
version = "0.2.2"
features = ["stm32f302", "rt"]

[dependencies.trustflight-hal-trait]
path = "../hal-trait"
version = "0.1.0"
